@@ -42,7 +42,8 @@ static void addImageSizes(QComboBox *box)
 
 static void addViewTypes(QComboBox *box, bool iconMode=false, bool groupedTree=false)
 {
-    box->addItem(i18n("Tree"), ItemView::Mode_Tree);
+    box->addItem(i18n("Simple Tree"), ItemView::Mode_SimpleTree);
+    box->addItem(i18n("Detailed Tree"), ItemView::Mode_DetailedTree);
     if (groupedTree) {
         box->addItem(i18n("Grouped Albums"), ItemView::Mode_GroupedTree);
     }
