@@ -54,7 +54,7 @@ public:
     void refresh();
     void save();
     void addSelectionToPlaylist(bool replace, quint8 priorty=0);
-    void setView(bool tree) { view->setMode(tree ? ItemView::Mode_Tree : ItemView::Mode_List); }
+    void setView(int v) { view->setMode((ItemView::Mode)v); }
     void focusSearch() { view->focusSearch(); }
     void goBack() { view->backActivated(); }
     QStringList getCategories();
